# warehouse-to-model

./: .travis.yml  Dockerfile  Makefile  README.md  docker-compose.yml  gunicorn.py  setup.cfg
deployment/: deployment.yml  ingress.yml  service.yml
scripts/: deploy.sh
src/warehouse_to_model/: __init__.py  app.py  decorators.py  models.py  resources.py  settings.py  wsgi.py
tests/: conftest.py
tests/test_integration/: test_openapi_docs.py
